--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,6 +13,9 @@ set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
+set -g mouse on
+set-option -g history-limit 5000
+
 # vim-like pane switching
 bind -r ^ last-window
 bind -r k select-pane -U
@@ -25,4 +28,10 @@ bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nv
 # forget the find window.  That is for chumps
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
-bind-key -r i run-shell "tmux neww tmux-cht.sh"
+bind-key -r i run-shell "tmux neww cht"
+
+bind-key "|" split-window -h -c "#{panel_current_path}"
+bind-key "\\" split-window -fh -c "#{panel_current_path}"
+
+bind-key "-" split-window -v -c "#{panel_current_path}"
+bind-key "_" split-window -fv -c "#{panel_current_path}"
